<resources>
    <string name="app_name">Soccer-Zone-Time</string>
    <string name="player_name">Player Name</string>
    <string name="info_aplikasi">About</string>
    <string name="nationality">Player Nationality</string>
    <string name="flags">F</string>
    <string name="club">CF</string>
    <string name="player_club">Player Club</string>
    <string name="detail_player_name">Detail Player Name</string>
    <string name="detail_nationality">Detail Nationality</string>
    <string name="detail_flags">Detail Flags</string>
    <string name="description_player">Player Description</string>
    <string name="player_fullname">Player FUll Name</string>
    <string name="player_weight">Player W</string>
    <string name="player_height">Player H</string>
    <string name="player_desc">Player Deskripsi</string>
    <string-array name="data_player">
        <item>Cristiano Ronaldo</item>
        <item>Lionel Messi</item>
        <item>Kevin De Bruyne</item>
        <item>Toni Kroos</item>
        <item>Ruben Dias</item>
        <item>Antonio Rüdige</item>
        <item>Kylian Mbappé</item>
        <item>Erling Haaland</item>
        <item>Neymar Junior</item>
        <item>Karim Benzema</item>
        <item>Thibaut Courtois</item>
        <item>Jude Bellingham</item>
    </string-array>
    <string-array name="data_player_full_name">
        <item>Cristiano Ronaldo dos Santos Aveiro</item>
        <item>Lionel Andrés Messi</item>
        <item>Kevin De Bruyne</item>
        <item>Toni Kroos</item>
        <item>Rúben dos Santos Gato Alves Dias</item>
        <item>Antonio Rüdige</item>
        <item>Kylian Mbappé Lottin</item>
        <item>Erling Braut Haaland</item>
        <item>Neymar da Silva Santos Júnior</item>
        <item>Karim Mostafa Benzema</item>
        <item>Thibaut Nicolas Marc Courtois</item>
        <item>Jude Victor William Bellingham</item>
    </string-array>
    <string-array name="data_player_weight">
        <item>85 kg</item>
        <item>72 kg</item>
        <item>68 kg</item>
        <item>78 kg</item>
        <item>85 kg</item>
        <item>70 kg</item>
        <item>75 kg</item>
        <item>88 kg</item>
        <item>64 kg</item>
        <item>82 kg</item>
        <item>96 kg</item>
        <item>75 kg</item>

    </string-array>
    <string-array name="data_player_height">
        <item>187 cm</item>
        <item>170 cm</item>
        <item>181 cm</item>
        <item>182 cm</item>
        <item>187 cm</item>
        <item>190 cm</item>
        <item>178 cm</item>
        <item>195 cm</item>
        <item>174 cm</item>
        <item>185 cm</item>
        <item>200 cm</item>
        <item>186 cm</item>
    </string-array>
</resources>