<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/orangeyellow"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="10dp"
    tools:context=".DetailPlayer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/detail_player_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/detail_player_club"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toStartOf="@+id/detail_player_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detail_player_photo" />

            <ImageView
                android:id="@+id/detail_nationality_player"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_player_photo"
                app:layout_constraintTop_toTopOf="@+id/detail_player_photo" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/detail_player_name"
                android:textColor="@color/purpleblack"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_player_photo"
                app:layout_constraintVertical_bias="0.258"
                tools:ignore="MissingConstraints" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_id_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_name"
                app:cardCornerRadius="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Full_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Full Name : "
                        android:textAllCaps="true"
                        android:textColor="@color/orangeyellow"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/tv_detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/player_fullname"
                        android:textColor="@color/orangeyellow"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Full_Name" />

                    <TextView
                        android:id="@+id/Nationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="nationality : "
                        android:textAllCaps="true"
                        android:textColor="@color/orangeyellow"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

                    <TextView
                        android:id="@+id/tv_detail_nationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nationality"
                        android:textColor="@color/orangeyellow"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Nationality"/>

                    <TextView
                        android:id="@+id/Status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="status : "
                        android:textAllCaps="true"
                        android:textColor="@color/orangeyellow"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_nationality" />

                    <TextView
                        android:id="@+id/detail_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(Active Player)"
                        android:textColor="@color/orangeyellow"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Status"/>

                    <TextView
                        android:id="@+id/Club"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="Club Now : "
                        android:textAllCaps="true"
                        android:textColor="@color/orangeyellow"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_status" />

                    <TextView
                        android:id="@+id/tv_detail_club"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/player_club"
                        android:textColor="@color/orangeyellow"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Club"/>

                    <TextView
                        android:id="@+id/Height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="Height"
                        android:textColor="@color/orangeyellow"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/Club"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_club" />

                    <TextView
                        android:id="@+id/Weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="Weight"
                        android:textColor="@color/orangeyellow"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/Club"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_club" />

                    <TextView
                        android:id="@+id/tv_Weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/player_weight"
                        android:textColor="@color/orangeyellow"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/Club"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Weight" />

                    <TextView
                        android:id="@+id/tv_Height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/player_height"
                        android:textColor="@color/orangeyellow"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/Club"
                        app:layout_constraintTop_toBottomOf="@+id/Height" />

                    <TextView
                        android:id="@+id/tv_item_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="100"
                        android:text="@string/player_desc"
                        android:textColor="@color/orangeyellow"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_margin="20dp"
                        android:justificationMode="inter_word"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_Height" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>